updated User APIs Except update
