# app/Http/Controllers/Auth/APIs/V1/AuthController.php
@@ -5,16 +5,22 @@ namespace App\Http\Controllers\Auth\APIs\V1;
 use App\Http\Controllers\Controller;
 use App\Models\User;
 use Illuminate\Http\Request;
-
+use App\Http\Traits\HttpResonse;
+use App\Http\Resources\v1\UserResource;
+use App\Http\Resources\v1\UserCollection;
+use App\Http\Requests\Users\v1\UserRequest;
 class AuthController extends Controller
 {
+    use HttpResonse;
+
     /**
      * Display a listing of the resource.
      */
     /**
      * @OA\Get(
      *   tags={"Users"},
-     *   path="/api/v1/users",
+     *   path="/api/v1/user",
+     *   summary="Get all Users List",
      *   @OA\Response(
      *       response="default",
      *       description="successful operation",
@@ -23,16 +29,14 @@ class AuthController extends Controller
      */
     public function index()
     {
-        //
+        $users = new UserCollection(User::paginate());
+        return $this->success('Users List', $users);
     }
 
     /**
      * Show the form for creating a new resource.
      */
-    public function create()
-    {
-        //
-    }
+    public function create(){}
 
     /**
      * Store a newly created resource in storage.
@@ -67,9 +71,20 @@ class AuthController extends Controller
      *     @OA\Response(response="401", description="Failed to create user")
      * )
      */
-    public function store(Request $request)
+    public function store(UserRequest $request)
     {
-        //
+        try {
+            if(!$request->wantsJson()){
+                return $this->validation('Invalid data format, Its allow only json request.');
+            }
+
+            $data = $request->all();
+            $user = new UserResource(User::create($data));
+            return $this->objecteCreated('User Create', $user);
+
+        } catch (\Throwable $th) {
+            return $this->internalServer($th->getMessage());
+        }
     }
 
     /**
@@ -81,28 +96,29 @@ class AuthController extends Controller
      *     path="/api/v1/user/{user}",
      *     @OA\Parameter(
      *         name="user",
-     *         in="query",
+     *         in="path",
      *         description="User id",
      *         required=true,
      *         @OA\Schema(type="string")
      *     ),
      *     summary="Get logged-in user details",
      *     @OA\Response(response="200", description="Success"),
-     *     security={{"bearerAuth":{}}}
      * )
      */
     public function show(User $user)
     {
-        //
+        if(!$user){
+            return $this->success('No User Details Found.');
+        }
+
+        $user = new UserResource($user);
+        return $this->success('User Details', $user);
     }
 
     /**
      * Show the form for editing the specified resource.
      */
-    public function edit(User $user)
-    {
-        //
-    }
+    public function edit(User $user){}
 
     /**
      * Update the specified resource in storage.
@@ -115,9 +131,86 @@ class AuthController extends Controller
     /**
      * Remove the specified resource from storage.
      */
-    public function destroy(User $user)
+    /**
+     * @OA\Delete(
+     *     tags={"Users"},
+     *     path="/api/v1/user/{user}",
+     *     @OA\Parameter(
+     *         name="user",
+     *         in="path",
+     *         description="User id",
+     *         required=true,
+     *         @OA\Schema(type="string")
+     *     ),
+     *     summary="Hard delete user details",
+     *     @OA\Response(response="200", description="Success"),
+     * )
+     */
+    public function destroy($user)
     {
-        //
+        $user  = User::onlyTrashed()->find($user);
+        if($user){
+            $user->forceDelete();
+            return $this->noContent('User deleted successfully.');
+        }
+
+        return $this->validation('User not found or already deleted.');
+    }
+    
+    /**
+     * Remove the specified resource from storage as tempery.
+     */
+    /**
+     * @OA\Delete(
+     *     tags={"Users"},
+     *     path="/api/v1/user/{user}/trashed",
+     *     @OA\Parameter(
+     *         name="user",
+     *         in="path",
+     *         description="User id",
+     *         required=true,
+     *         @OA\Schema(type="string")
+     *     ),
+     *     summary="Soft delete user details",
+     *     @OA\Response(response="200", description="Success"),
+     * )
+     */
+    public function delete(User $user)
+    {
+        if ($user->delete()) {
+            return $this->noContent('User deleted temporarily.');
+        }
+
+        return $this->validation('Invalid Request. This user is already deleted.');
+    }
+
+    /**
+     * Restore the deleted resource from storage.
+     */
+    /**
+     * @OA\Patch(
+     *     tags={"Users"},
+     *     path="/api/v1/user/{user}/restore",
+     *     @OA\Parameter(
+     *         name="user",
+     *         in="path",
+     *         description="User id",
+     *         required=true,
+     *         @OA\Schema(type="string")
+     *     ),
+     *     summary="Retore soft deleted user details",
+     *     @OA\Response(response="200", description="Success"),
+     * )
+     */
+    public function restore($user)
+    {
+        $user  = User::onlyTrashed()->find($user);
+        if($user){
+            $user->restore();
+            return $this->noContent('User restored successfully.');
+        }
+
+        return $this->validation('No trash data of this user.');
     }
 
 
